<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/airTickets"
        android:icon="@drawable/plane_icon"
        android:title="@string/air_tickets" />

    <item
        android:id="@+id/hotels"
        android:icon="@drawable/hotel_icon"
        android:title="@string/hotels" />

    <item
        android:id="@+id/shortly"
        android:icon="@drawable/shortly_icon"
        android:title="@string/shortly" />

    <item
        android:id="@+id/subscriptions"
        android:icon="@drawable/subscriptions_icon"
        android:title="@string/subscriptions" />

    <item
        android:id="@+id/profile"
        android:icon="@drawable/profile_icon"
        android:title="@string/profile" />
</menu>