<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="56dp"
    android:background="@drawable/background_search"
    android:paddingHorizontal="@dimen/common_spacing"
    tools:context=".ui.SearchFragment">

    <FrameLayout
        android:id="@+id/rectangle_2"
        android:layout_width="38dp"
        android:layout_height="5dp"
        android:layout_marginTop="@dimen/common_spacing"
        android:background="@drawable/background_rectangle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="96dp"
        android:layout_marginTop="45dp"
        android:background="@drawable/rounded_background_small"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iconPlane"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/common_spacing"
            android:src="@drawable/plane_side_icon"
            android:tint="@color/gray6"
            app:layout_constraintBottom_toBottomOf="@id/placeOfDeparture"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/placeOfDeparture" />

        <EditText
            android:id="@+id/placeOfDeparture"
            android:layout_width="wrap_content"
            android:layout_height="21dp"
            android:layout_marginStart="49dp"
            android:layout_toEndOf="@id/iconSearch"
            android:background="@color/gray4"
            android:digits="АБВГДЕЁЖЗИЙКЛМНОПРСТУФХЦЧШЩЪЫЬЭЮЯабвгдеёжзийклмнопрстуфхцчшщъыьэюя"
            android:hint="@string/departure_hint"
            android:inputType="textCapSentences"
            android:textColor="@color/white"
            android:textColorHint="@color/gray6"
            app:layout_constraintBottom_toTopOf="@id/placeOfArrival"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="TouchTargetSizeCheck" />

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="@dimen/separator_height"
            android:layout_marginHorizontal="@dimen/common_spacing"
            android:background="@drawable/line_separator"
            app:layout_constraintBottom_toTopOf="@id/placeOfArrival"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/placeOfDeparture" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iconSearch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/common_spacing"
            android:contentDescription="@string/description_search_icon"
            android:src="@drawable/search_icon"
            android:tint="@color/white"
            app:layout_constraintBottom_toBottomOf="@id/placeOfArrival"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/placeOfArrival" />

        <EditText
            android:id="@+id/placeOfArrival"
            android:layout_width="wrap_content"
            android:layout_height="21dp"
            android:background="@color/gray4"
            android:digits="АБВГДЕЁЖЗИЙКЛМНОПРСТУФХЦЧШЩЪЫЬЭЮЯабвгдеёжзийклмнопрстуфхцчшщъыьэюя"
            android:hint="@string/arrival_hint"
            android:inputType="textCapSentences"
            android:textColor="@color/white"
            android:textColorHint="@color/gray6"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@id/placeOfDeparture"
            app:layout_constraintTop_toBottomOf="@id/placeOfDeparture"
            tools:ignore="TouchTargetSizeCheck" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/clearText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/common_spacing"
            android:src="@drawable/clear_icon"
            android:tint="@color/gray7"
            app:layout_constraintBottom_toBottomOf="@id/placeOfArrival"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/placeOfArrival" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/hintsContainer"
        android:layout_width="0dp"
        android:layout_height="90dp"
        android:layout_marginTop="165dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/routeButton"
            android:layout_width="@dimen/hints_image_size"
            android:layout_height="@dimen/hints_image_size"
            android:layout_marginStart="@dimen/reduced_spacing"
            android:background="@drawable/background_quick_button"
            android:backgroundTint="@color/green"
            android:contentDescription="@string/description_route_button"
            android:src="@drawable/calendar_icon"
            app:layout_constraintBottom_toTopOf="@id/diffDest"
            app:layout_constraintEnd_toStartOf="@id/anywhereButton"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/diffDest"
            android:layout_width="70dp"
            android:layout_height="34dp"
            android:layout_marginTop="@dimen/reduced_spacing"
            android:gravity="center"
            android:text="@string/difficult_route"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="@id/routeButton"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/routeButton" />

        <ImageButton
            android:id="@+id/anywhereButton"
            android:layout_width="@dimen/hints_image_size"
            android:layout_height="@dimen/hints_image_size"
            android:background="@drawable/background_quick_button"
            android:backgroundTint="@color/blue"
            android:contentDescription="@string/description_anywhere_button"
            android:src="@drawable/calendar_icon"
            app:layout_constraintEnd_toStartOf="@id/weekendButton"
            app:layout_constraintStart_toEndOf="@id/routeButton"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="RedundantDescriptionCheck" />

        <TextView
            android:layout_width="80dp"
            android:layout_height="17dp"
            android:layout_marginTop="@dimen/reduced_spacing"
            android:gravity="center"
            android:text="@string/anywhere"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="@id/anywhereButton"
            app:layout_constraintStart_toStartOf="@id/anywhereButton"
            app:layout_constraintTop_toBottomOf="@id/anywhereButton" />

        <ImageButton
            android:id="@+id/weekendButton"
            android:layout_width="@dimen/hints_image_size"
            android:layout_height="@dimen/hints_image_size"
            android:background="@drawable/background_quick_button"
            android:backgroundTint="@color/dark_blue"
            android:contentDescription="@string/description_weekend_button"
            android:src="@drawable/calendar_icon"
            app:layout_constraintEnd_toStartOf="@id/fireButton"
            app:layout_constraintStart_toEndOf="@id/anywhereButton"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="80dp"
            android:layout_height="17dp"
            android:layout_marginTop="@dimen/reduced_spacing"
            android:gravity="center"
            android:text="@string/weekend"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="@id/weekendButton"
            app:layout_constraintStart_toStartOf="@id/weekendButton"
            app:layout_constraintTop_toBottomOf="@id/weekendButton" />

        <ImageButton
            android:id="@+id/fireButton"
            android:layout_width="@dimen/hints_image_size"
            android:layout_height="@dimen/hints_image_size"
            android:layout_marginEnd="@dimen/reduced_spacing"
            android:background="@drawable/background_quick_button"
            android:backgroundTint="@color/red"
            android:contentDescription="@string/description_fire_button"
            android:src="@drawable/fire_icon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/weekendButton"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="65dp"
            android:layout_height="34dp"
            android:layout_marginTop="@dimen/reduced_spacing"
            android:gravity="center"
            android:text="@string/fire"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="@id/fireButton"
            app:layout_constraintStart_toStartOf="@id/fireButton"
            app:layout_constraintTop_toBottomOf="@id/fireButton" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/popularDestinationContainer"
        android:layout_width="0dp"
        android:layout_height="216dp"
        android:layout_marginTop="285dp"
        android:background="@drawable/rounded_background_small"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/istanbulContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="@dimen/common_spacing"
            android:paddingTop="@dimen/common_spacing">

            <androidx.cardview.widget.CardView
                android:id="@+id/istanbulImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardCornerRadius="@dimen/reduced_spacing"
                app:layout_constraintBottom_toTopOf="@id/separatorTop"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/istanbul"
                    android:contentDescription="@string/image_of_istanbul" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/istanbul"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/reduced_spacing"
                android:fontFamily="@font/sfprodisplaybold"
                android:text="@string/istanbul"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintBottom_toTopOf="@+id/popular_destination_istanbul"
                app:layout_constraintStart_toEndOf="@id/istanbulImage"
                app:layout_constraintTop_toTopOf="@id/istanbulImage" />

            <TextView
                android:id="@+id/popular_destination_istanbul"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/popular_destination"
                android:textColor="@color/gray5"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="@id/istanbulImage"
                app:layout_constraintStart_toStartOf="@id/istanbul"
                app:layout_constraintTop_toBottomOf="@id/istanbul" />

            <FrameLayout
                android:id="@+id/separatorTop"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginVertical="@dimen/reduced_spacing"
                android:layout_marginEnd="@dimen/common_spacing"
                android:background="@drawable/line_separator"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/istanbulImage" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/sochiContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="@dimen/common_spacing"
            android:paddingTop="@dimen/common_spacing">

            <androidx.cardview.widget.CardView
                android:id="@+id/sochiImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardCornerRadius="@dimen/reduced_spacing"
                app:layout_constraintBottom_toTopOf="@id/separatorMiddle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/sochi"
                    android:contentDescription="@string/image_of_sochi" />

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/sochi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/reduced_spacing"
                android:fontFamily="@font/sfprodisplaybold"
                android:text="@string/sochi"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintBottom_toTopOf="@id/popular_destination_sochi"
                app:layout_constraintStart_toEndOf="@id/sochiImage"
                app:layout_constraintTop_toTopOf="@id/sochiImage" />

            <TextView
                android:id="@+id/popular_destination_sochi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/popular_destination"
                android:textColor="@color/gray5"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="@id/sochiImage"
                app:layout_constraintStart_toStartOf="@id/sochi"
                app:layout_constraintTop_toBottomOf="@id/sochi" />

            <FrameLayout
                android:id="@+id/separatorMiddle"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/reduced_spacing"
                android:layout_marginEnd="@dimen/common_spacing"
                android:background="@drawable/line_separator"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/sochiImage"
                app:layout_constraintTop_toBottomOf="@id/sochiImage" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/phuketContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="@dimen/common_spacing"
            android:paddingTop="@dimen/common_spacing">

            <androidx.cardview.widget.CardView
                android:id="@+id/phuketImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardCornerRadius="@dimen/reduced_spacing"
                app:layout_constraintBottom_toTopOf="@id/separatorBottom"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/phuket"
                    android:contentDescription="@string/image_of_phuket" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/phuket"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/reduced_spacing"
                android:fontFamily="@font/sfprodisplaybold"
                android:text="@string/phuket"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintBottom_toTopOf="@id/popular_destination_phuket"
                app:layout_constraintStart_toEndOf="@id/phuketImage"
                app:layout_constraintTop_toTopOf="@id/phuketImage" />

            <TextView
                android:id="@+id/popular_destination_phuket"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/popular_destination"
                android:textColor="@color/gray5"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="@id/phuketImage"
                app:layout_constraintStart_toStartOf="@id/phuket"
                app:layout_constraintTop_toBottomOf="@id/phuket" />

            <FrameLayout
                android:id="@+id/separatorBottom"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/reduced_spacing"
                android:layout_marginEnd="@dimen/common_spacing"
                android:background="@drawable/line_separator"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/phuketImage"
                app:layout_constraintTop_toBottomOf="@id/phuketImage" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>