<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainFragmentContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".ui.MainFragment">

    <TextView
        android:id="@+id/title"
        android:layout_width="172dp"
        android:layout_height="52dp"
        android:layout_marginTop="60dp"
        android:gravity="center_horizontal|top"
        android:text="@string/search_for_cheap_flights"
        android:textAppearance="@style/title1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="VisualLintLocaleText,TextSizeCheck" />


    <FrameLayout
        android:id="@+id/inputFieldsContainer"
        android:layout_width="match_parent"
        android:layout_height="122dp"
        android:layout_marginHorizontal="@dimen/common_spacing"
        android:layout_marginTop="148dp"
        android:background="@drawable/rounded_background_large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_margin="@dimen/common_spacing"
            android:background="@drawable/rounded_background_small"
            android:elevation="4dp">

            <ImageView
                android:id="@+id/iconSearch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/reduced_spacing"
                android:contentDescription="@string/description_search_icon"
                android:src="@drawable/search_icon"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ImageContrastCheck" />

            <EditText
                android:id="@+id/placeOfDeparture"
                android:layout_width="wrap_content"
                android:layout_height="21dp"
                android:layout_marginStart="49dp"
                android:layout_marginTop="@dimen/common_spacing"
                android:layout_toEndOf="@id/iconSearch"
                android:background="@color/gray4"
                android:digits="АБВГДЕЁЖЗИЙКЛМНОПРСТУФХЦЧШЩЪЫЬЭЮЯабвгдеёжзийклмнопрстуфхцчшщъыьэюя"
                android:hint="@string/departure_hint"
                android:inputType="textCapSentences"
                android:textAppearance="@style/buttonText1"
                android:textColor="@color/white"
                android:textColorHint="@color/gray6"
                app:layout_constraintBottom_toTopOf="@id/placeOfArrival"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="TextContrastCheck,TouchTargetSizeCheck" />

            <FrameLayout
                android:id="@+id/separator"
                android:layout_width="0dp"
                android:layout_height="@dimen/separator_height"
                android:layout_marginEnd="@dimen/common_spacing"
                android:background="@drawable/line_separator"
                app:layout_constraintBottom_toTopOf="@id/placeOfArrival"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/placeOfDeparture"
                app:layout_constraintTop_toBottomOf="@id/placeOfDeparture" />

            <EditText
                android:id="@+id/placeOfArrival"
                android:layout_width="0dp"
                android:layout_height="21dp"
                android:background="@color/gray4"
                android:digits="АБВГДЕЁЖЗИЙКЛМНОПРСТУФХЦЧШЩЪЫЬЭЮЯабвгдеёжзийклмнопрстуфхцчшщъыьэюя"
                android:hint="@string/arrival_hint"
                android:inputType="textCapSentences"
                android:textAppearance="@style/buttonText1"
                android:textColor="@color/gray6"
                android:textColorHint="@color/gray6"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@id/separator"
                app:layout_constraintStart_toStartOf="@id/placeOfDeparture"
                app:layout_constraintTop_toBottomOf="@id/placeOfDeparture"
                tools:ignore="VisualLintTextFieldSize,VisualLintBounds,TouchTargetSizeCheck,TextContrastCheck" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </FrameLayout>

    <TextView
        android:id="@+id/title2"
        android:layout_width="wrap_content"
        android:layout_height="26dp"
        android:layout_marginTop="302dp"
        android:text="@string/title2"
        android:textAppearance="@style/title1"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="@+id/inputFieldsContainer"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="VisualLintLocaleText,TextSizeCheck" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:orientation="horizontal"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title2"
        tools:listitem="@layout/card_offers" />

    <TextView
        android:id="@+id/errorLoadingText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_spacing"
        android:text="@string/download_error"
        android:textColor="@color/white"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title2" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/retryButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/reduced_spacing"
        android:backgroundTint="@color/blue"
        android:padding="@dimen/reduced_spacing"
        android:text="@string/retry"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/errorLoadingText" />

</androidx.constraintlayout.widget.ConstraintLayout>